--- a/src/Styles.less
+++ b/src/Styles.less
@@ -93,7 +93,6 @@ footer {
       margin: auto;
       text-align: center;
     }
-
 }
 
 .common-button-props {
@@ -213,3 +212,205 @@ footer {
     .header-one-content;
     padding-bottom: 0px;
 }
+
+// Small screen tablet portrait styles.
+.sm-tablet-portrait {
+  .navbar-container {
+      padding: 15px 65px;
+  }
+
+  .nav-item {
+      padding-left: 40px;
+    }
+
+    .navbar-title-image {
+        width: 140px;
+        height: 28px;
+      }
+
+  .header-one-content, .header-three-content, .header-two-content {
+      padding-left: 50px;
+      padding-right: 50px;
+  }
+
+  .header-two-content {
+      padding-top: 150px;
+  }
+
+  .header-one-content {
+    padding-top: 150px;
+      padding-bottom: 400px;
+  }
+
+  .main-image-container {
+      left: 34%;
+      width: 50%;
+  }
+
+  .main-image {
+      height: 450px;
+      margin-top: -340px;
+      width: 500px;
+  }
+
+  footer {
+    div {
+        margin: auto;
+        width: 50%;
+        padding-top: 75px;
+        text-align: center;
+    }
+    img {
+        width: 70px !important;
+        height: 13px !important;
+        vertical-align: top !important;
+    }
+    img, label {
+      display: inline-block;
+    }
+  }
+
+  form {
+      display: block;
+      margin: auto;
+      width: 75%;
+
+      button {
+        display: block;
+      }
+  }
+}
+
+// Small screen tablet landscape styles.
+.sm-tablet-landscape {
+  .sm-tablet-portrait;
+
+  .navbar-container {
+      padding: 15px 65px;
+  }
+
+  .nav-item {
+      padding-left: 50px;
+    }
+
+  .header-one-content {
+      padding-top: 200px;
+      padding-bottom: 50px;
+      button {
+          padding-top: 20px;
+      }
+  }
+
+  .header-h1-position {
+      width: 45%;
+  }
+
+  .main-image-container {
+      left: 57%;
+      width: 200px;
+  }
+
+}
+
+// Large screen tablet portrait styles.
+.lg-tablet-portrait {
+  .sm-tablet-portrait;
+
+  .main-image {
+      width: 550px;
+  }
+}
+
+// Large screen tablet landscape styles.
+.lg-tablet-landscape {
+    .sm-tablet-landscape;
+
+    .main-image {
+        width: 600px;
+        height: 600px;
+        margin-top: -450px;
+    }
+
+    .header-two-content {
+        position: relative;
+
+        div.header-h1-position {
+            position: absolute;
+            right: 10px;
+            bottom: 80px;
+        }
+
+        div.header-h2-position {
+            width: 400px;
+        }
+
+        p {
+            position: absolute;
+            top: 225px;
+            right: 120px;
+            width: 500px;
+        }
+    }
+
+    .header-three-content {
+        position: relative;
+        div.header-h1-position {
+            width: 400px;
+            display: inline-block;
+        }
+        div.contact-us-container {
+            position: absolute;
+            display: inline-block;
+            right: 150px;
+            top: 100px;
+            form {
+               display: inline;
+                input:nth-child(1), input:nth-child(2) {
+                    display: inline;
+                    width: 250px;
+                    margin-left: 20px;
+                }
+                input:nth-child(3) {
+                  margin-left: 20px;
+                  width: 520px;
+                }
+            }
+          }
+        button.cta-button-contact {
+            padding-left: 20px;
+            padding-top: 20px;
+        }
+      }
+}
+
+@media only screen
+  and (min-width: 768px)
+  and (max-width: 1024px)
+  and (orientation: portrait)
+  and (-webkit-min-device-pixel-ratio: 1)  {
+    .sm-tablet-portrait;
+}
+
+@media only screen
+  and (min-width: 768px)
+  and (max-width: 1024px)
+  and (orientation: landscape)
+  and (-webkit-min-device-pixel-ratio: 1)  {
+    .sm-tablet-landscape;
+}
+
+@media only screen
+  and (min-width: 1024px)
+  and (max-width: 1366px)
+  and (orientation: portrait)
+  and (-webkit-min-device-pixel-ratio: 1)  {
+    .lg-tablet-portrait;
+}
+
+@media only screen
+  and (min-width: 1025px)
+  and (max-width: 1366px)
+  and (orientation: landscape)
+  and (-webkit-min-device-pixel-ratio: 2)  {
+      .lg-tablet-landscape;
+  }
