--- a/src/Styles.less
+++ b/src/Styles.less
@@ -1,3 +1,4 @@
+// -----------------------------------------------Common CSS properties as per design file-----------------------------------------------
 // Font-family specifics
 @Poppins-FF: "Poppins";
 
@@ -25,7 +26,11 @@
 
  // Letter-spacing specifics
 @LS-1: 0.1em;
+// -----------------------------------------------End (Common CSS properties as per design file)-----------------------------------------------
 
+
+
+// -----------------------------------------------Mixins for commonly used CSS code-----------------------------------------------
 .fontStyle(@fontSize, @fontWeight, @fontColor, @lineHeight: @LH-4) {
     font-family: @Poppins-FF;
     font-size: @fontSize;
@@ -34,27 +39,47 @@
     color: @fontColor;
 }
 
+.headerFormatStyle(@fontSize, @lineHeight) {
+      span:nth-child(1) {
+          display: block;
+      }
+      span.first-headline {
+            .fontStyle(@fontSize, @SemiBold-FW, @CroutonWhite, @lineHeight);
+      }
+      span.next-headline {
+            .fontStyle(@fontSize, @SemiBold-FW, @CroutonGrey, @lineHeight);
+      }
+}
+
+.common-button-props {
+    outline: none;
+    border: none;
+    background: none;
+}
+
+.disable-hyperlink-styles {
+      text-decoration: none;
+      color: @CroutonGrey;
+}
+
+.center-element {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+// -----------------------------------------------End (Mixins for commonly used CSS code)-----------------------------------------------
+
+
+
+// -----------------------------------------------Base styles for Mobile devices (Mobile first responsive design approach)-----------------------------------------------
 h1 {
     margin-top: 0px;
     margin-bottom: 5px;
-    &.first-headline {
-          .fontStyle(@FS-1, @SemiBold-FW, @CroutonWhite, @LH-1);
-    }
-    &.next-headline {
-          .fontStyle(@FS-1, @SemiBold-FW, @CroutonGrey, @LH-1);
-    }
+    .headerFormatStyle(@FS-1, @LH-1);
 }
 
 h2 {
-  span:nth-child(1) {
-      display: block;
-  }
-  span.first-headline {
-        .fontStyle(@FS-2, @SemiBold-FW, @CroutonWhite, @LH-2);
-  }
-  span.next-headline {
-        .fontStyle(@FS-2, @SemiBold-FW, @CroutonGrey, @LH-2);
-  }
+  .headerFormatStyle(@FS-2, @LH-2);
 }
 
 h3 {
@@ -92,21 +117,9 @@ footer {
     padding: 40px 0px;
     img, label {
       padding: 7px 10px;
-      display: block;
-      margin: auto;
+      .center-element;
       text-align: center;
     }
-}
-
-.common-button-props {
-    outline: none;
-    border: none;
-    background: none;
-}
-
-.disable-hyperlink-styles {
-      text-decoration: none;
-      color: @CroutonGrey;
 }
 
 .header-one {
@@ -135,6 +148,9 @@ footer {
     span {
       color: @CroutonWhite;
     }
+    a {
+      .disable-hyperlink-styles;
+    }
 }
 
 .navbar-title-image {
@@ -157,15 +173,13 @@ footer {
 }
 
 .header-h1-position {
-    margin: 22px 0px 22px 0px;
+    margin: 22px 0px;
 }
 
 .cta-button {
     .fontStyle(@FS-3, @SemiBold-FW, @CroutonGrey);
     letter-spacing: @LS-1;
-    border: none;
-    background: none;
-    outline: none;
+    .common-button-props;
     cursor: pointer;
 }
 
@@ -196,9 +210,7 @@ footer {
 }
 
 .main-image {
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+    .center-element;
     height: 275px;
     margin-top: -150px;
 }
@@ -231,7 +243,11 @@ footer {
 :-moz-placeholder {
   color: @CroutonWhite;
 }
+// -----------------------------------------------End (Base styles for Mobile devices)-----------------------------------------------
 
+
+
+// -----------------------------------------------Media queries for different screen resolutions and orientations-----------------------------------------------
 // Small screen tablet portrait styles.
 .sm-tablet-portrait {
   .navbar-container {
@@ -284,8 +300,7 @@ footer {
   }
 
   form {
-      display: block;
-      margin: auto;
+      .center-element;
       width: 75%;
 
       button {
@@ -510,3 +525,4 @@ footer {
     and (min-width: 1367px) {
         .desktop-styles;
     }
+// -----------------------------------------------End (Media queries for different screen resolutions and orientations)-----------------------------------------------
