Comment updated on LESS file

--- a/src/Styles.less
+++ b/src/Styles.less
@@ -248,7 +248,7 @@ footer {
 
 
 // -----------------------------------------------Media queries for different screen resolutions and orientations-----------------------------------------------
-// Small screen tablet portrait styles.
+// Small screen (min: 768px & max: 1024px) tablet portrait styles.
 .sm-tablet-portrait {
   .navbar-container {
       padding: 15px 65px;
@@ -315,7 +315,7 @@ footer {
     .sm-tablet-portrait;
 }
 
-// Small screen tablet landscape styles.
+// Small screen (min: 768px & max: 1024px) tablet landscape styles.
 .sm-tablet-landscape {
   .sm-tablet-portrait;
 
@@ -351,7 +351,7 @@ footer {
     .sm-tablet-landscape;
 }
 
-// Large screen tablet portrait styles.
+// Large screen (min: 1025px & max: 1366px) tablet portrait styles.
 .lg-tablet-portrait {
   .sm-tablet-portrait;
 
@@ -381,7 +381,7 @@ footer {
     .lg-tablet-portrait;
 }
 
-// Large screen tablet landscape styles.
+// Large screen (min: 1025px & max: 1366px) tablet landscape styles.
 .lg-tablet-landscape {
     .sm-tablet-landscape;
 
@@ -451,7 +451,7 @@ footer {
       .lg-tablet-landscape;
   }
 
-// Desktop styles.
+// Desktop and large screen (min: 1367px) styles.
 .desktop-styles {
     .lg-tablet-landscape;
 
